--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.14",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "datamapper": "git+https://github.com/educobuci/datamapper.git"
   },
   "devDependencies": {
     "typescript": "^5",
