--- a/package.json
+++ b/package.json
@@ -11,22 +11,29 @@
     "test:unit": "vitest test/unit"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "datamapper": "git+https://github.com/educobuci/datamapper.git",
+    "lucide-react": "^0.452.0",
     "next": "14.2.14",
     "pg": "^8.13.0",
-    "datamapper": "git+https://github.com/educobuci/datamapper.git"
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/pg": "^8.11.10",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
     "vitest": "^2.1.2",
     "vitest-mock-extended": "^2.0.2"
   }
