--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
